fixed modal wrapper not being position fixed when prompted to log in, with the screen behind it grayed out, along with scroll of shame. also made like heart for image  position be more accurate to it's parallel in airbnb

--- a/frontend/src/assets/styles/cmps/_modal.scss
+++ b/frontend/src/assets/styles/cmps/_modal.scss
@@ -1,9 +1,12 @@
 .modal-wrapper {
-    position: absolute;
-    height: 100vh;
-    width: 100vw;
+    // position: absolute;
+    // height: 100vh;
+    // width: 100vw;
     z-index: 12;
     background-color: rgba(0, 0, 0, .5);
+    position: fixed;
+    height: 100%;
+    width: 100%;
 
     & .modal-wrapper-second {
         transform: translate(-50%, -50%);
