--- a/frontend/src/assets/styles/cmps/_stay-preview.scss
+++ b/frontend/src/assets/styles/cmps/_stay-preview.scss
@@ -17,9 +17,10 @@
 
     .heart-svg {
         position: absolute;
-        top: 3%;
-        left: 85%;
-        right: rem(15px);
+        // top: 3%;
+        // left: 85%;
+        top: 15px;
+        right: 15px;
     }
 
     .img-container {
